# ProjectDshboard

./: .env.example  .gitignore  CONTRIBUTING.md  PLUGGABLE_FEATURE_COMPLETION_SUMMARY.md  README.md  alembic.ini  docker-compose.demo.yml  package.json  pnpm-lock.yaml  projectroadmap.md  pyproject.toml  render.yaml  test_material_error.txt  tmp_debug_overlay.py  tsconfig.json  turbo.json  verify-deployment.sh
.github/workflows/: backend-ci.yml
ai-instructions/: main_chat_instructions.md
ai-instructions/capabilities/submittal_creation/: submittal_creation_rules.md  submittal_creation_workflow.md
ai-instructions/context/: project_domain_context.md
alembic/: env.py
alembic/versions/: 693db3dbc8c7_add_material_type_id_to_callout_.py  b1a2c3d4e5f6_add_material_type_override_color.py  c5d6e7f8a9b0_add_material_color_overrides_table.py
apps/mobile/: App.tsx  app.json  package.json
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.css  layout.tsx  page.css  page.test.tsx  page.tsx
apps/web/components/: OnboardingModal.test.tsx  OnboardingModal.tsx  ProjectMembersPanel.tsx  onboarding.css
apps/web/docs/: ai-workspace-premium-audit.md  construction-markup-premium-audit.md  markup-keyboard-shortcuts.md  (+3 more)
docs/: DEMO_DEPLOYMENT.md  plan-project-access-viewer-servers.md
scripts/: inspect_routes.py  read_error.py  run_pipeline.py  verify_aggregator.py
src/takeoff/: cli.py  config.py  db.py
tests/: test_ingestion.py  test_material_color_override.py  test_overlay.py
(+92 files in other folders)
