[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "takeoff"
version = "0.1.0"
description = "Construction takeoff system: converts CAD-exported PDFs into a traceable takeoff graph"
requires-python = ">=3.11"
dependencies = [
    # PDF parsing & vector extraction
    "pymupdf>=1.24.0",
    "pdfminer.six>=20221105",
    # Geometry & spatial indexing
    "shapely>=2.0.0",
    "rtree>=1.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # AI
    "anthropic>=0.34.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Config
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Image processing (provenance crops)
    "pillow>=10.4.0",
    # Fuzzy matching (schedule mark lookup)
    "rapidfuzz>=3.9.0",
]

[project.scripts]
takeoff = "takeoff.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/takeoff"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
